add function to convert known format to incidence frequency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,8 @@ Suggests:
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 Imports: 
+    assertthat,
     dplyr,
     iNEXT,
-    magrittr
+    magrittr,
+    purrr
