--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
+    ggplot2,
     knitr,
     rmarkdown,
     testthat (>= 3.0.0)
@@ -20,4 +21,5 @@ Imports:
     dplyr,
     iNEXT,
     magrittr,
-    purrr
+    purrr,
+    readr
