move unused dependencies to suggests, for vignette and examples

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,9 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
     ggplot2,
+    iNEXT,
     knitr,
+    readr,
     rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
@@ -20,10 +22,8 @@ Imports:
     assertthat,
     dplyr,
     glue,
-    iNEXT,
     magrittr,
-    purrr,
-    readr
+    purrr
 Depends: 
     R (>= 2.10)
 LazyData: true
