--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            comment = c(ORCID = "0000-0002-6658-6062"))
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
-URL: https://pietrh.github.io/vlindersRarefaction/
+URL: https://pietrh.github.io/vlindersRarefaction/, https://github.com/PietrH/vlindersRarefaction
 Depends: 
     R (>= 2.10)
 Imports: 
@@ -30,3 +30,4 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+BugReports: https://github.com/PietrH/vlindersRarefaction/issues
